--- a/404.html
+++ b/404.html
@@ -6,51 +6,62 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description"
         content="天津科技大学位于渤海之滨、海河之畔，是中央和地方共建、天津市重点建设的以工为主，工、理、文、农、医、经、管、法、艺等学科协调发展的多科性大学。学校在五十余年的办学历程中，突出'坚持拓展轻工特色，精心培育行业中坚，矢志服务国计民生'的办学特色，立足轻工、服务社会，立足天津、面向全国，输送各类人才12万余名，他们在各自的工作岗位上，敬业奉献，拼搏进取，展现了科大学子内敛、踏实的精神品质。学校毕业生以基础扎实、素质全面、富于开拓精神和实践能力而受到社会各界青睐"/>
-  <title>404 - not found</title>
+  <title>天津科技大学 - 404</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/tust.css">
   <style>
-    #container{
-      position: absolute;
-      top:0;
-      bottom: 0;
-      left:0;
-      right:0;
-      text-align: center;
+    body{
+      background-color: #4f3542;
     }
-    .big{
-      font-size:300px;
-      font-weight:bold;
-      color: #333;
+   
+    .big {
+      font-size: 300px;
+      font-weight: bold;
+      color: #ceddd1;
       background: #d5ebda;
     }
-    .small{
-      font-size:3em;
+
+    .small {
+      font-size: 3em;
+    }
+    .title{
+      color: #e54560;
+      margin-top:20px;
+    }
+    .content,
+    .content a{
+      color: #d5ebda;
+    }
+    .btn-default,
+    .btn-default:hover{
+      background-color: #55bf9b;
+      border:none;
+      color: #f2ecba;
+    }
+    .span{
+      position: relative;
+      bottom:-95px;
     }
   </style>
 </head>
 <body>
-<div id="container">
-  <div class="big">404</div>
-  <div class="small">
-    <p>木有找到这一页( ｀д′)</p>
-    <span id="re">5</span> 秒后 <a href="javascript:history.go(-1);">返回</a>
+<div class="container-fluid text-center">
+  <div class="row big">
+    <div class="col-xs-12" style="overflow: hidden">
+      <span class="span">404</span>
+    </div>
+  </div>
+  <div class="row small">
+    <div class="col-xs-12">
+      <p class="title">这一页被毛荣荣吃掉了！( ｀д′)</p>
+      <p class="content">
+        <a class="btn btn-default btn-lg" href="javascript:history.go(-1);">退回去</a>
+      </p>
+
+    </div>
   </div>
 </div>
-  <script>
-    function reset() {
-      var re = document.querySelector('#re');
-      var t = parseInt(re.innerHTML);
-      t--;
-      if(t > 0){
-        setTimeout(function () {
-          re.innerHTML = t;
-          reset();
-        },1000)
-      }else{
-        history.go(-1);
-      }
-    }
-    reset();
-  </script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
