--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
   </div>
   <div class="row small">
     <div class="col-xs-12">
-      <p class="title">这一页被毛荣荣吃掉了！( ｀д′)</p>
+      <p class="title">这一页被怪兽吃掉了！( ｀д′)</p>
       <p class="content">
         <a class="btn btn-default btn-lg" href="javascript:history.go(-1);">退回去</a>
       </p>
