--- a/404.html
+++ b/404.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 </div>
-<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/jquery-1.11.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
