--- a/home.tust.html
+++ b/home.tust.html
@@ -10,7 +10,6 @@
   <link rel="icon" href="favicon.ico">
   <!--[if lt IE 9]>
   <script src="js/html5shiv.min.js"></script>
-  <script src="js/respond.min.js"></script>
   <![endif]-->
 </head>
 <body>
@@ -84,7 +83,7 @@
 
 <div id="footer_box"></div>
 
-<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/jquery-1.11.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/angular.js"></script>
 <script src="js/common.js"></script>
@@ -107,7 +106,7 @@
       $scope.isLogin = false;
       return;
     }
-    $http.get(`data/home.tust.php?uid=${uid}`).success(function (data) {
+    $http.get('data/home.tust.php?uid='+uid).success(function (data) {
       $scope.xfList = [20,18.5,24,16,34,12,0,0];
       $scope.jdList = [5,5.5,6,7,4,5,0,0];
       $scope.pjList=[];
